--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "Caio Rigloski",
   "license": "ISC",
   "dependencies": {
-    "express-handlebars": "^6.0.3"
+    "body-parser": "^1.19.2",
+    "express-handlebars": "^6.0.3",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.17.0"
   }
 }
