--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "cookie-parser": "^1.4.6",
     "express-handlebars": "^6.0.3",
+    "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
+    "req-flash": "^0.0.3",
     "sequelize": "^6.17.0"
   }
 }
