--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "Caio Rigloski",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "cookie-parser": "^1.4.6",
     "express-handlebars": "^6.0.3",
     "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "req-flash": "^0.0.3",
     "sequelize": "^6.17.0"
   }
